--- a/401_450.md
+++ b/401_450.md
@@ -821,10 +821,361 @@ Therefore, Options A and B are the correct choices as IAM policies can be direct
 
 </details>
 
+<details>
+  <summary>Question 424</summary>
 
+A company is running a custom application on Amazon EC2 On-Demand Instances.
+The application has frontend nodes that need to run 24 hours a day, 7 days a week and backend nodes that need to run only for a short time based on workload.
+The number of backend nodes varies during the day.
 
+The company needs to scale out and scale in more instances based on workload.
+Which solution will meet these requirements MOST cost-effectively?
 
+-   [ ] A. Use Reserved Instances for the frontend nodes.
+    Use AWS Fargate for the backend nodes.
+-   [ ] B. Use Reserved Instances for the frontend nodes.
+    Use Spot Instances for the backend nodes.
+-   [ ] C. Use Spot Instances for the frontend nodes.
+    Use Reserved Instances for the backend nodes.
+-   [ ] D. Use Spot Instances for the frontend nodes.
+    Use AWS Fargate for the backend nodes.
 
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Use Reserved Instances for the frontend nodes.
+    Use Spot Instances for the backend nodes.
+
+Why these are the correct answers:
+
+B. Use Reserved Instances for the frontend nodes.
+Use Spot Instances for the backend nodes.
+
+-   [ ] Reserved Instances offer cost savings for long-running, predictable workloads like the frontend nodes.
+-   [ ] Spot Instances provide cost savings for short-term, flexible workloads that can tolerate interruptions, such as the backend nodes.
+
+Why are the other answers wrong?
+
+-   [ ] A. AWS Fargate is a serverless compute service and is generally more expensive than EC2 Spot Instances for comparable compute capacity.
+    It's suitable for containerized applications, not general EC2 instances.
+-   [ ] C. Using Spot Instances for the frontend, which requires continuous availability, is not ideal because Spot Instances can be interrupted.
+    Reserved Instances are better suited for this purpose.
+-   [ ] D. Combining Spot Instances for the frontend (for which they are unsuitable) and Fargate for the backend (which is less cost-effective than Spot) is not the best cost optimization strategy.
+
+Therefore, Option B is the most cost-effective solution because it pairs Reserved Instances for the stable frontend and Spot Instances for the scalable backend.
+
+</details>
+<details>
+  <summary>Question 425</summary>
+
+A company uses high block storage capacity to runs its workloads on premises.
+The company's daily peak input and output transactions per second are not more than 15,000 IOPS.
+The company wants to migrate the workloads to Amazon EC2 and to provision disk performance independent of storage capacity.
+Which Amazon Elastic Block Store (Amazon EBS) volume type will meet these requirements MOST cost-effectively?
+
+-   [ ] A. GP2 volume type
+-   [ ] B. io2 volume type
+-   [ ] C. GP3 volume type
+-   [ ] D. io1 volume type
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. GP3 volume type
+
+Why these are the correct answers:
+
+C. GP3 volume type
+
+-   [ ] GP3 volumes allow you to provision IOPS and throughput independently of storage capacity, providing cost efficiency when you need high performance without necessarily needing a lot of storage.
+-   [ ] GP3 volumes offer a balance of performance and cost for workloads that require specific IOPS and throughput.
+
+Why are the other answers wrong?
+
+-   [ ] A. GP2 volumes tie IOPS to storage capacity, which can be less cost-effective if you need high IOPS with less storage.
+-   [ ] B and D. io1 and io2 volumes are provisioned IOPS volumes designed for the highest performance and are more expensive than GP3.
+    They are typically used for very I/O-intensive applications that require consistent, high IOPS, which is not the primary concern in this scenario.
+
+Therefore, Option C, GP3, is the most cost-effective choice because it meets the requirement of provisioning disk performance independently of storage capacity.
+
+</details>
+<details>
+  <summary>Question 426</summary>
+
+A company needs to store data from its healthcare application.
+The application's data frequently changes.
+A new regulation requires audit access at all levels of the stored data.
+The company hosts the application on an on-premises infrastructure that is running out of storage capacity.
+A solutions architect must securely migrate the existing data to AWS while satisfying the new regulation.
+Which solution will meet these requirements?
+
+-   [ ] A. Use AWS DataSync to move the existing data to Amazon S3.
+    Use AWS CloudTrail to log data events.
+-   [ ] B. Use AWS Snowcone to move the existing data to Amazon S3.
+    Use AWS CloudTrail to log management events.
+-   [ ] C. Use Amazon S3 Transfer Acceleration to move the existing data to Amazon S3.
+    Use AWS CloudTrail to log data events.
+-   [ ] D. Use AWS Storage Gateway to move the existing data to Amazon S3.
+    Use AWS CloudTrail to log management events.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use AWS DataSync to move the existing data to Amazon S3.
+    Use AWS CloudTrail to log data events.
+
+Why these are the correct answers:
+
+A. Use AWS DataSync to move the existing data to Amazon S3.
+Use AWS CloudTrail to log data events.
+
+-   [ ] AWS DataSync is designed for efficient and secure online data transfer to AWS storage services like Amazon S3.
+-   [ ] AWS CloudTrail can log data events for S3, providing a detailed audit trail of data access and changes, which satisfies the regulatory requirement.
+
+Why are the other answers wrong?
+
+-   [ ] B. AWS Snowcone is used for edge computing and data transfer where network connectivity is limited.
+    It's less efficient for continuous, online data migration compared to DataSync.
+    CloudTrail logs management events, not data events in S3.
+-   [ ] C. Amazon S3 Transfer Acceleration speeds up transfers over long distances but does not provide a mechanism for auditing data access.
+    CloudTrail logs are needed for auditing.
+-   [ ] D. AWS Storage Gateway is a hybrid cloud storage service that connects on-premises applications to AWS cloud storage.
+    It does not directly migrate data in the same way as DataSync, and CloudTrail logs management events, not data events.
+
+Therefore, Option A provides the best solution for migrating the data to S3 and meeting the audit requirements by using DataSync for efficient transfer and CloudTrail for logging data events.
+
+</details>
+<details>
+  <summary>Question 427</summary>
+
+A solutions architect is implementing a complex Java application with a MySQL database.
+The Java application must be deployed on Apache Tomcat and must be highly available.
+What should the solutions architect do to meet these requirements?
+
+-   [ ] A. Deploy the application in AWS Lambda.
+    Configure an Amazon API Gateway API to connect with the Lambda functions.
+-   [ ] B. Deploy the application by using AWS Elastic Beanstalk.
+    Configure a load-balanced environment and a rolling deployment policy.
+-   [ ] C. Migrate the database to Amazon ElastiCache.
+    Configure the ElastiCache security group to allow access from the application.
+-   [ ] D. Launch an Amazon EC2 instance.
+    Install a MySQL server on the EC2 instance.
+    Configure the application on the server.
+    Create an AMI.
+    Use the AMI to create a launch template with an Auto Scaling group.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Deploy the application by using AWS Elastic Beanstalk.
+    Configure a load-balanced environment and a rolling deployment policy.
+
+Why these are the correct answers:
+
+B. Deploy the application by using AWS Elastic Beanstalk.
+Configure a load-balanced environment and a rolling deployment policy.
+
+-   [ ] AWS Elastic Beanstalk simplifies the deployment and management of Java applications on Apache Tomcat.
+-   [ ] Elastic Beanstalk can automatically provision and manage the underlying infrastructure, including EC2 instances, load balancers, and Auto Scaling groups, to ensure high availability.
+-   [ ] Rolling deployment policies minimize downtime during updates by gradually replacing instances.
+
+Why are the other answers wrong?
+
+-   [ ] A. AWS Lambda is designed for serverless functions, not for running long-running applications like a Java application on Tomcat.
+-   [ ] C. Amazon ElastiCache is a caching service, not a database for running a MySQL database.
+-   [ ] D. Manually launching EC2 instances, creating AMIs, and setting up Auto Scaling groups is more complex and time-consuming than using Elastic Beanstalk.
+    It also requires more operational overhead.
+
+Therefore, Option B is the most efficient and straightforward way to deploy the Java application on Tomcat with high availability.
+
+</details>
+<details>
+  <summary>Question 428</summary>
+
+A serverless application uses Amazon API Gateway, AWS Lambda, and Amazon DynamoDB.
+The Lambda function needs permissions to read and write to the DynamoDB table.
+Which solution will give the Lambda function access to the DynamoDB table MOST securely?
+
+-   [ ] A. Create an IAM user with programmatic access to the Lambda function.
+    Attach a policy to the user that allows read and write access to the DynamoDB table.
+    Store the access\_key\_id and secret\_access\_key parameters as part of the Lambda environment variables.
+    Ensure that other AWS users do not have read and write access to the Lambda function configuration.
+-   [ ] B. Create an IAM role that includes Lambda as a trusted service.
+    Attach a policy to the role that allows read and write access to the DynamoDB table.
+    Update the configuration of the Lambda function to use the new role as the execution role.
+-   [ ] C. Create an IAM user with programmatic access to the Lambda function.
+    Attach a policy to the user that allows read and write access to the DynamoDB table.
+    Store the access\_key\_id and secret\_access\_key parameters in AWS Systems Manager Parameter Store as secure string parameters.
+    Update the Lambda function code to retrieve the secure string parameters before connecting to the DynamoDB table.
+-   [ ] D. Create an IAM role that includes DynamoDB as a trusted service.
+    Attach a policy to the role that allows read and write access from the Lambda function.
+    Update the code of the Lambda function to attach to the new role as an execution role.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Create an IAM role that includes Lambda as a trusted service.
+    Attach a policy to the role that allows read and write access to the DynamoDB table.
+    Update the configuration of the Lambda function to use the new role as the execution role.
+
+Why these are the correct answers:
+
+B. Create an IAM role that includes Lambda as a trusted service.
+Attach a policy to the role that allows read and write access to the DynamoDB table.
+Update the configuration of the Lambda function to use the new role as the execution role.
+
+-   [ ] IAM roles provide secure permissions to AWS services without needing to manage long-term credentials.
+-   [ ] By assigning a role to the Lambda function, you grant it permissions to access DynamoDB in a secure and managed way.
+
+Why are the other answers wrong?
+
+-   [ ] A. Storing IAM user credentials (access keys) in Lambda environment variables is insecure.
+    If the Lambda function is compromised, the credentials could be exposed.
+-   [ ] C. While using Systems Manager Parameter Store is more secure than environment variables, it's still less secure and more complex than using IAM roles directly.
+    It also involves additional code to retrieve the credentials.
+-   [ ] D. IAM roles are designed to be assumed by AWS services (like Lambda), not the other way around.
+    DynamoDB cannot assume a role to grant permissions to Lambda.
+
+Therefore, Option B is the most secure and recommended method for granting Lambda function access to DynamoDB.
+
+</details>
+
+<details>
+  <summary>Question 429</summary>
+
+The following IAM policy is attached to an IAM group. This is the only policy applied to the group.
+
+```json
+{
+  "Version": "2012-10-17",
+  "Statement": [
+    {
+      "Sid": "1",
+      "Effect": "Allow",
+      "Action": "ec2:\*",
+      "Resource": "\*",
+      "Condition": {
+        "StringEquals": {
+          "ec2:Region": "us-east-1"
+        }
+      }
+    },
+    {
+      "Sid": "2",
+      "Effect": "Deny",
+      "Action": [
+        "ec2:StopInstances",
+        "ec2:TerminateInstances"
+      ],
+      "Resource": "\*",
+      "Condition": {
+        "BoolIfExists": {
+          "aws:MultiFactorAuthPresent": "false"
+        }
+      }
+    }
+  ]
+}
+```
+
+What are the effective IAM permissions of this policy for group members?
+
+- [ ] A. Group members are permitted any Amazon EC2 action within the us-east-1 Region. Statements after the Allow permission are not applied.
+- [ ] B. Group members are denied any Amazon EC2 permissions in the us-east-1 Region unless they are logged in with multi-factor authentication (MFA).
+- [ ] C. Group members are allowed the ec2:StopInstances and ec2:TerminateInstances permissions for all Regions when logged in with multi-factor authentication (MFA). Group members are permitted any other Amazon EC2 action.
+- [ ] D. Group members are allowed the ec2:StopInstances and ec2:TerminateInstances permissions for the us-east-1 Region only when logged in with multi-factor authentication (MFA). Group members are permitted any other Amazon EC2 action within the us-east-1 Region.
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Group members are allowed the ec2:StopInstances and ec2:TerminateInstances permissions for the us-east-1 Region only when logged in with multi-factor authentication (MFA). Group members are permitted any other Amazon EC2 action within the us-east-1 Region.
+Why these are the correct answers:
+
+D. Group members are allowed the ec2:StopInstances and ec2:TerminateInstances permissions for the us-east-1 Region only when logged in with multi-factor authentication (MFA).
+Group members are permitted any other Amazon EC2 action within the us-east-1 Region.
+
+- [ ] The first statement allows all EC2 actions in the us-east-1 Region.
+- [ ] The second statement denies the StopInstances and TerminateInstances actions unless MFA is present.
+- [ ] Because both conditions apply, the effective permissions are a combination of both statements.
+
+Why are the other answers wrong?
+
+- [ ] A. The deny statement does affect the permissions.
+- [ ] B. The allow statement grants general permissions, and the deny statement restricts specific actions.
+- [ ] C. The deny statement is conditional and only applies to StopInstances and TerminateInstances. It is also limited to the us-east-1 Region due to the allow statement's condition.
+
+Therefore, Option D accurately reflects the combined effect of both the allow and deny statements in the IAM policy.
+
+</details>
+
+<details>
+  <summary>Question 430</summary>
+
+A manufacturing company has machine sensors that upload .csv files to an Amazon S3 bucket.
+These .csv files must be converted into images and must be made available as soon as possible for the automatic generation of graphical reports.
+The images become irrelevant after 1 month, but the .csv files must be kept to train machine learning (ML) models twice a year.
+The ML trainings and audits are planned weeks in advance.
+
+Which combination of steps will meet these requirements MOST cost-effectively? (Choose two.)
+
+- [ ] A. Launch an Amazon EC2 Spot Instance that downloads the .csv files every hour, generates the image files, and uploads the images to the S3 bucket.
+- [ ] B. Design an AWS Lambda function that converts the .csv files into images and stores the images in the S3 bucket.
+    Invoke the Lambda function when a .csv file is uploaded.
+- [ ] C. Create S3 Lifecycle rules for .csv files and image files in the S3 bucket.
+    Transition the .csv files from S3 Standard to S3 Glacier 1 day after they are uploaded.
+    Expire the image files after 30 days.
+- [ ] D. Create S3 Lifecycle rules for .csv files and image files in the S3 bucket.
+    Transition the .csv files from S3 Standard to S3 One Zone-Infrequent Access (S3 One Zone-IA) 1 day after they are uploaded.
+    Expire the image files after 30 days.
+- [ ] E. Create S3 Lifecycle rules for .csv files and image files in the S3 bucket.
+    Transition the .csv files from S3 Standard to S3 Standard-Infrequent Access (S3 Standard-IA) 1 day after they are uploaded.
+    Keep the image files in Reduced Redundancy Storage (RRS).
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Design an AWS Lambda function that converts the .csv files into images and stores the images in the S3 bucket.
+    Invoke the Lambda function when a .csv file is uploaded.
+- [ ] C. Create S3 Lifecycle rules for .csv files and image files in the S3 bucket.
+    Transition the .csv files from S3 Standard to S3 Glacier 1 day after they are uploaded.
+    Expire the image files after 30 days.
+
+Why these are the correct answers:
+
+B. Design an AWS Lambda function that converts the .csv files into images and stores the images in the S3 bucket.
+Invoke the Lambda function when a .csv file is uploaded.
+
+- [ ] Lambda functions can be triggered by S3 events, providing a serverless and efficient way to process files immediately after upload.
+
+C. Create S3 Lifecycle rules for .csv files and image files in the S3 bucket.
+Transition the .csv files from S3 Standard to S3 Glacier 1 day after they are uploaded.
+Expire the image files after 30 days.
+
+- [ ] S3 Lifecycle rules automate the management of objects, reducing storage costs by moving .csv files to Glacier for long-term storage and deleting images after 30 days.
+
+Why are the other answers wrong?
+
+- [ ] A. Launching an EC2 Spot Instance adds operational overhead for managing the instance and introduces potential interruptions.
+    It is also less cost-effective for event-driven processing compared to Lambda.
+- [ ] D. S3 One Zone-IA is cheaper than S3 Standard but is less durable and available than S3 Glacier for long-term archival.
+- [ ] E. S3 Standard-IA is more expensive than S3 Glacier, and Reduced Redundancy Storage (RRS) is deprecated and not recommended for new applications.
+
+Therefore, Options B and C provide the most cost-effective and efficient solution by using Lambda for immediate processing and S3 Lifecycle rules for storage management.
+
+</details>
 
 
 
